2006-10-10  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-date-editor.c: Remove the focus grab after
	dialog execution. Fixes NB#42555.

2006-10-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-date-editor.c:
	(hildon_date_editor_entry_validate): Set the stored date value 
	when it's validated with some entry empty. Fixes NB#42504.

2006-10-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
	
	[0.14.5-1 release]
	
	* configure.ac:
	* debian/changelog: Update.

	* debian/hildon-libs-dev.install: Removing redundant .la/.a files. 

2006-10-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/copyright: One more license fix. 

2006-10-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets-plugins/hildon-color-chooser-dialog-hsv.c:
	* hildon-widgets-plugins/hildon-color-chooser-hsv.c:
	* hildon-widgets/gtk-infoprint.c:
	* hildon-widgets/gtk-infoprint.h:
	* hildon-widgets/hildon-add-home-dialog.c:
	* hildon-widgets/hildon-add-home-dialog.h:
	* hildon-widgets/hildon-app-private.h:
	* hildon-widgets/hildon-app.c:
	* hildon-widgets/hildon-app.h:
	* hildon-widgets/hildon-appview.c:
	* hildon-widgets/hildon-appview.h:
	* hildon-widgets/hildon-banner.c:
	* hildon-widgets/hildon-banner.h:
	* hildon-widgets/hildon-calendar-popup.c:
	* hildon-widgets/hildon-calendar-popup.h:
	* hildon-widgets/hildon-caption.c:
	* hildon-widgets/hildon-caption.h:
	* hildon-widgets/hildon-code-dialog.c:
	* hildon-widgets/hildon-code-dialog.h:
	* hildon-widgets/hildon-color-button.c:
	* hildon-widgets/hildon-color-button.h:
	* hildon-widgets/hildon-color-chooser-button.c:
	* hildon-widgets/hildon-color-chooser-button.h:
	* hildon-widgets/hildon-color-chooser-dialog.c:
	* hildon-widgets/hildon-color-chooser-dialog.h:
	* hildon-widgets/hildon-color-chooser.c:
	* hildon-widgets/hildon-color-chooser.h:
	* hildon-widgets/hildon-color-popup.c: